--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -1,12 +1,6 @@
 name: "Update Ruby"
 description: "Updates Ruby version"
 
-inputs:
-  ruby-paths:
-    description: 'The paths/directories where the ruby version config files are located, default root'
-    required: false
-    default: '.'
-
 runs:
   using: composite
   steps:
@@ -24,8 +18,8 @@ runs:
   - name: Update Ruby versions
     shell: bash
     run: |
-      ## convert path inputs into array
-      paths_array=(${{inputs.ruby-paths}})
+      ## convert path variable into array
+      paths_array=(${${{ env.RUBY_PATHS}}})
       ## Check if any paths were found
       if [ ${#paths_array=[@]} -eq 0 ]; then
         echo "No 'ruby-version' files found. Exiting."
