--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -30,7 +30,7 @@ runs:
       for path in "${paths_array=[@]}"; do
         ## pushd automatically manages a directory stack.
         if ! pushd "$path" > /dev/null; then
-          echo "!!! ERROR: Could not change directory to $project_path. Skipping."
+          echo "!!! ERROR: Could not change directory to $path. Exiting."
           exit 1;
         fi
 
@@ -40,7 +40,7 @@ runs:
         sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'${{ env.TARGET_RUBY_VERSION }}'/ Dockerfile
         ## attempt to run bundle install
         if ! bundle update --ruby; then
-          echo "!!! ERROR: 'bundle update' FAILED in $path !!!"
+          echo "!!! ERROR: `bundle update` FAILED in $path !!!"
           echo "So have to brute force it"
           echo "Remove and rebuild Gem lock file."
           rm Gemfile.lock
