--- a/.github/actions/update-ruby/action.yml
+++ b/.github/actions/update-ruby/action.yml
@@ -27,17 +27,24 @@ runs:
         exit 0
       fi
       ## Loop paths
-      for path in "${paths_array=[@]}"; do
+      for path in "${paths_array[@]}"; do
+
         ## pushd automatically manages a directory stack.
         if ! pushd "$path" > /dev/null; then
           echo "!!! ERROR: Could not change directory to $path. Exiting."
           exit 1;
+        else
+          echo "Switched to $path"
         fi
 
         ## update .ruby file
         sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'${{ env.TARGET_RUBY_VERSION }}'/ .ruby-version
-        ## update docker file
-        sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'${{ env.TARGET_RUBY_VERSION }}'/ Dockerfile
+
+        ## update docker file if exists
+        if [ -e "Dockerfile" ]; then
+          sed -i s/\[0-9\]\\.\[0-9\]\\.\[0-9\]/'${{ env.TARGET_RUBY_VERSION }}'/ Dockerfile
+        fi
+
         ## attempt to run bundle install
         if ! bundle update --ruby; then
           echo "!!! ERROR: bundle update FAILED in $path !!!"
@@ -50,6 +57,7 @@ runs:
         else
           echo "Bundle update Successful!"
         fi
+
         # Pop back to the original directory
         popd > /dev/null
       done
